Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 3.4.0
-
None
-
ghx-label-9
Description
I've run into multiple cases that got broken by IMPALA-8897. The general problem is the assumption that the hostname that the Impala server refers to itself is resolvable by the client accessing the web UI. Cases I've run into:
- In docker and kubernetes, where the internal hostnames aren't visible outside of the internal network
- On systems without a DNS-resolvable hostname, e.g. my Ubuntu desktop that I access via a static IP
I'm not sure what a fix would look like, but I think we at least need some way to work around the problem in situations like this.
Attachments
Issue Links
- is broken by
-
IMPALA-8897 Fully qualify all paths on the webserver
- Resolved
- is duplicated by
-
IMPALA-8919 css and js files not found when accessing web page using IP address
- Resolved